--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "rxjs": "~7.8.0",
+    "take2-digital-forms-data-model": "^1.0.0",
     "tslib": "^2.6.2",
     "zone.js": "~0.14.2"
   },
